Bug 158230.  Clear out all the relevant style data when inline style causes reframes.  r=dbaron, sr=hyatt, a=asa